--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>2.21.0</version>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>2.23.4</version>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 </project>
